# cul-archives-utils

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  dependabot.yml  pyproject.toml  requirements.in  requirements.txt  tox.ini
.github/workflows/: runtests.yml
cul_archives_utils/: clio_utils.py  data_utils.py  file_utils.py  xml_utils.py
tests/: helpers.py  test_clio_utils.py  test_data_utils.py  test_file_utils.py  test_sheets_utils.py  test_xml_utils.py  test_xslt_utils.py
utils/: clio_utils.py  data_utils.py  file_utils.py  xslt_utils.py
