[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cul_archives_utils"
description = "Python utility module for archives and collection data"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["cul_archives_utils"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}